put gender in player card and make linktext fixed for overflow fix

--- a/client/scss/Interface/Components/_linktext.scss
+++ b/client/scss/Interface/Components/_linktext.scss
@@ -28,9 +28,7 @@
     background-color: $linktextPopupBack;
     color: $typeColor;
     display: none;
-    position: absolute;
-    left: 50%;
-    top: 50%;
+    position: fixed;
     z-index: 999;
   }
   &:hover {
